# peter-amerkhanian.github.io

./: .RData  .gitignore  _quarto.yml  blog.bib  blog.qmd  custom.scss  gallery.ejs  index.html  index.qmd  memos.qmd  projects.qmd  styles.css  toc.html
.github/workflows/: update-copyright-year.yml
docs/: blog.html  blog.xml  index.html  listings.json  memos.html  memos.xml  projects.html  robots.txt  search.json  sitemap.xml  styles.css
in-progress/: .gitignore
in-progress/calpers-modeling/: calpers.ipynb  retirement.py  stock_model.ipynb
in-progress/correlation-matrices/: index.ipynb
in-progress/fare-gate-eval/: test.qmd  test.txt  test_.ipynb  test__.ipynb
in-progress/fuzzy-merge/: index.ipynb
in-progress/gis_followup/: interactive.ipynb
in-progress/ipums-wth-r/: index.html  index.qmd
in-progress/oakland-pumas/: future.qmd
in-progress/reno_model/: home.ipynb  index.ipynb  mortgage_sim.ipynb  neighborhoods.ipynb  owner.ipynb
in-progress/sql_tests/: test.qmd
memos/: _metadata.yml  memos.bib
memos/SF-Arrests/: city_bootstrap.pickle  geospatial_utils.py  index.html  index.ipynb  stats_utilities.py
memos/SIR/: index.ipynb
posts/: _metadata.yml  blog.bib
posts/SF-Arrests/: .gitignore  data_setup.py  environment.yml  index.ipynb  stats_utilities.py  tl_bootstrap.pickle
posts/SIR/: index.ipynb
posts/arima-models/: index.qmd
posts/covariance-matrices/: index.ipynb
posts/dask-data-io/: .gitignore  benchmark_results.csv  index.ipynb  single_benchmark.py  times.csv  (+1 more)
posts/geopandas_maps/: gis_posts.bib  index.ipynb  pyproject.toml  util.py
(+105 files in other folders)
