[project]
name = "geopandas-maps"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Amerkhanian",email = "peteamer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pygris (>=0.2.0,<0.3.0)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "folium (>=0.19.6,<0.20.0)",
    "mapclassify (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
